project 2 version 2 (code works but need to modify for exact output)

--- a/Stutter Web App/war/Stutter_Web_App.html
+++ b/Stutter Web App/war/Stutter_Web_App.html
@@ -52,7 +52,7 @@
         <td colspan="2" style="font-weight:bold;">Please enter the text:</td>        
       </tr>
       <tr>
-        <td id="nameFieldContainer"></td>
+        <td id="textFieldContainer"></td>
         <td id="sendButtonContainer"></td>
       </tr>
       <tr>
